[tool.poetry]
name = "netinv"
version = "0.1.1"
description = "Network inventory with async connection support"
authors = ["Dmitry Figol <git@dmfigol.me>"]

readme = "README.md"
homepage = "https://github.com/dmfigol/netinv"
repository = "https://github.com/dmfigol/netinv"
keywords = ["netinv", "network inventory", "network automation", "inventory"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6.2"
pydantic = "^1"

[tool.poetry.dev-dependencies]
bpython = "*"
mypy = "*"
flake8 = "*"
flake8-bugbear = "*"
pdbpp = "*"
black = "*"
isort = "*"
types-setuptools = "*"
pytest = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.6"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
ignore_errors = false
ignore_missing_imports = true
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
