[tool.poetry]
name = "netinv"
version = "0.2.0"
description = "Network inventory with async connection support"
authors = ["Dmitry Figol <git@dmfigol.me>"]

readme = "README.md"
homepage = "https://dmfigol.github.io/netinv"
repository = "https://github.com/dmfigol/netinv"
keywords = ["netinv", "network inventory", "network automation", "inventory"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.6.1"
pydantic = "^1"

[tool.poetry.dev-dependencies]
bpython = "*"
mypy = ">=0.910"
flake8 = "<4"
flake8-bugbear = "*"
pdbpp = "*"
black = { version = "*", allow-prereleases = true }
isort = "*"
pytest = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
